# api/openapi/ceph-api.swagger.json
@@ -23,6 +23,9 @@
       "name": "CrushRule"
     },
     {
+      "name": "Pool"
+    },
+    {
       "name": "Status"
     },
     {
@@ -567,6 +570,39 @@
         ],
         "tags": [
           "CrushRule"
+        ]
+      }
+    },
+    "/api/pool": {
+      "post": {
+        "operationId": "Pool_CreatePool",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/googleRpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object"
+            }
+          }
+        ],
+        "tags": [
+          "Pool"
         ]
       }
     },
